tests/matrices/invalid/invalid_symmetry_vector.mtx
%%MatrixMarket vector coordinate real symmetric
4 3
1 101
2 22
4 404
